@@ -4,6 +4,7 @@ Date: ????
   Bugfixes:
     - Fixed a memory leak and infinite loop when migrating with an infinite technology in the queue
     - Fixed several bugs related to hidden and disabled technologies being changed at runtime
+    - Fixed that disabled technologies would always be shown in the tech info panel
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: 2022-12-21
